--- a/check.html
+++ b/check.html
@@ -7,6 +7,72 @@
     <style rel="stylesheet" link="style.css"></style>
 </head>
 <body>
-    
+    <nav id="main-nav">
+        <h1 class="brand">Cafe Coffee Day</h1>
+    </nav>
+    <div class="page">
+        <section class="order box">
+            <h2 class="box-title">Your order Summary</h2>
+            <ul class="items"></ul>
+                <li class="item"></li>
+                    <div class="item-quantity">1x</div>
+                    <div class="item-title">Cappuccino</div>
+                    <div class="item-price">$3.99</div>
+                        <ul class="item-options-list">
+                            <li class="item-option">Light Foam</li>
+                        </ul>
+                <li class="item"></li>
+                    <div class="item-quantity">1x</div>
+                    <div class="item-title">Cappuccino</div>
+                    <div class="item-price">$3.99</div>
+                        <ul class="item-options-list">
+                            <li class="item-option">Light Foam</li>
+                        </ul>
+                <li class="item"></li>
+                    <div class="item-quantity">1x</div>
+                    <div class="item-title">Cappuccino</div>
+                    <div class="item-price">$3.99</div>
+                        <ul class="item-options-list">
+                            <li class="item-option">Light Foam</li>
+                        </ul>
+                <div class="add-item">
+                    <button class="add-item-btn">Add more items</button>
+                </div>
+        </section>
+        <section class="payment">
+            <div class="name-box box">
+                <h2 class="box-title">Customer Info</h2>
+                <div class="input-group">
+                    <label for="name" class="user-input-label">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Enter your name" class="user-input">
+                </div>
+            </div>
+            <div class="cc-box box">
+                <h2 class="box-title">Paymant Details</h2>
+                <div class="input-group">
+                    <label for="cc-number">Credit Card Number</label>
+                    <input type="text" id="cc-number" name="cc-number" placeholder="Enter your Credit Card number" class="user-input">
+                </div>
+            </div>
+        </section>
+        <section class="total"></section>
+            <table class="totals-table">
+                <tbody>
+                    <tr>
+                        <td>Subtotal:</td>
+                        <td>$19</td>
+                    </tr>
+                    <tr>
+                        <td>Tax</td>
+                        <td>$1.5</td>
+                    </tr>
+                    <tr class="final-totals">
+                        <td>Total:</td>
+                        <td>$20.5</td>
+                    </tr>
+                </tbody>
+            </table>
+            <button class="Checkout" type="button">Place Order</button>
+    </div> 
 </body>
 </html>
